--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password=
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=
+spring.mail.username=rashadjavad@gmail.com
 spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
